# LinearFold

./: CMakeLists.txt  linearfold
src/: LinearFold.cpp  LinearFoldEval.h
